Switch margin for #dropbox for padding of #content, thus making all elements in #content align and prevent the logo from overlaying content.

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -13,6 +13,8 @@ body {
 
 #content {
   height: 70%;
+  padding-left: 60px;
+  padding-right: 60px;
 }
 footer{
   border-top: 1px solid #aaa;
@@ -61,7 +63,6 @@ footer{
   border: 1px solid #999;
   background: #ddd;
   padding: 5px;
-  margin: 50px;
   height: 280px; 
   p{
     display:block;
